@@ -2,7 +2,8 @@
 
 	* packages/build.stx-btree/Makefile: stx-btree updated to version 0.9
 	* packages/build.wget/Makefile: fixed uncompresion
-	* packages/build.bison/Makefile: small fixed in bisom Makefile
+	* packages/build.bison/Makefile: small fix in bison Makefile
+	* packages/build.flex/Makefile: small fix in flex Makefile
 
 2013-09-23 Borut Razem <borut.razem AT gmail.com>
 
